--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
 </div>
 <!----------------------intro ------------------->
 <section class="w-50 mx-auto text-center pt-5" id="intro">
-  <h1 class="p-3 fs-2 border-top-3">Una agencia unica para todas tus necesidades de<span class="text-primary"> Márketing Digital</span></h1>
+  <h1 class="p-3 fs-2 border-top-3">Una agencia única para todas tus necesidades de<span class="text-primary"> Márketing Digital</span></h1>
 
-<p class="p-3 fs-4"><span class="text-primary">BucareWeb </span>es la agencia donde te ayudamos a establecer tu presencia online. SEO, páginas web, tiendas virtuales, redes</p>
+<p class="p-3 fs-4"><span class="text-primary">BucareWeb </span>es la agencia donde te ayudamos a establecer tu presencia online: seo, páginas web, tiendas virtuales, redes sociales.</p>
 </section>
 
 <!----------------------servicios ------------------->
